Fix CashierOrder page to use the same MenuPage specialized for cashiers and fixing high contrast styling.

--- a/Front-End/src/pages/Customer/CustomerHome.css
+++ b/Front-End/src/pages/Customer/CustomerHome.css
@@ -46,6 +46,9 @@
     font-size: 7rem;
 }
 
+.high-contrast .customer-start-order-button h1 {
+    color: rgb(0, 0, 39);
+}
 
 @media screen and (min-width: 1300px) {
     .customer-start-order-button h1 {
